notebook for scoring

--- a/notebooks/starter.ipynb
+++ b/notebooks/starter.ipynb
@@ -12,6 +12,7 @@
     "\n",
     "os.environ[\"DJANGO_SETTINGS_MODULE\"] = \"course_management.settings\"\n",
     "os.environ[\"DJANGO_ALLOW_ASYNC_UNSAFE\"] = \"true\"\n",
+    "os.environ[\"IS_LOCAL\"] = \"1\"\n",
     "\n",
     "import django\n",
     "django.setup()"
