transferring submissions from one user to another (closes #14)

--- a/notebooks/project-eval-debug.ipynb
+++ b/notebooks/project-eval-debug.ipynb
@@ -277,9 +277,8 @@
     "\n",
     "    responses = CriteriaResponse.objects.filter(review=r)\n",
     "    for resp in responses:\n",
-    "        print(resp.criteria.description)\n",
-    "        print(resp.get_scores())\n",
-    "        \n",
+    "        print(f\"{resp.criteria.description} {resp.get_score()}\")\n",
+    "\n",
     "    print()"
    ]
   },
