--- a/notebooks/starter.ipynb
+++ b/notebooks/starter.ipynb
@@ -5,7 +5,17 @@
    "execution_count": 1,
    "id": "f78701db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IS_LOCAL=True\n",
+      "['C:\\\\Users\\\\alexe\\\\.virtualenvs\\\\course-management-platform-wiAsnpQu\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\alexe\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-63a30ab0-b622-4166-bafc-127e5f84f91d.json']\n",
+      "Is test: False\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.chdir('..')\n",
@@ -20,8 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c7af9387-0c73-4b6d-a0db-e49bee7237fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from courses.models import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfc4ba99-14bc-44ec-8a23-d3d3b4b0c3cd",
    "metadata": {},
    "outputs": [],
    "source": []
