adding certificate to profile

--- a/notebooks/graduates.ipynb
+++ b/notebooks/graduates.ipynb
@@ -2,20 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "f78701db",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IS_LOCAL=True\n",
-      "['C:\\\\Users\\\\alexe\\\\git\\\\course-management-platform\\\\.venv\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\alexe\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-67732be5-d07a-4ce6-a7b6-13aa7f4bebac.json']\n",
-      "Is test: False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "os.chdir('..')\n",
@@ -30,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "c7af9387-0c73-4b6d-a0db-e49bee7237fd",
    "metadata": {},
    "outputs": [],
@@ -40,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "bfc4ba99-14bc-44ec-8a23-d3d3b4b0c3cd",
    "metadata": {},
    "outputs": [
@@ -69,7 +59,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
+   "id": "0da1bf2c-b241-46e2-9cc5-90934107e2f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://certificate.datatalks.club/mlops-zoomcamp/2024/{hash}.pdf'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cohort = 2024\n",
+    "course_name = 'mlops-zoomcamp'\n",
+    "certificate_url_template = f\"https://certificate.datatalks.club/{course_name}/{cohort}/{{hash}}.pdf\"\n",
+    "certificate_url_template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "c6798c0f-726d-4469-a8ac-f0d257252b30",
    "metadata": {},
    "outputs": [],
@@ -79,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "df384f6b-9c4f-4abe-879b-9a5787ee4279",
    "metadata": {},
    "outputs": [
@@ -89,7 +103,7 @@
        "138"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "3e110177-ce48-4e92-bda0-4149ce14c7a6",
    "metadata": {},
    "outputs": [],
@@ -117,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "dc3dadd6-63e8-4345-b91f-163e7d8e4093",
    "metadata": {},
    "outputs": [],
@@ -127,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "9186edcf-027f-4a2f-bdc4-92882b3e29bd",
    "metadata": {},
    "outputs": [],
@@ -143,12 +157,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "f5d3fbb7-e86a-4e90-b8c6-da2fd7a640fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "seen = set()\n",
+    "enrollments = []\n",
     "\n",
     "for submission in graduates:\n",
     "    enrollment = submission.enrollment\n",
@@ -157,9 +172,13 @@
     "    email = student.email\n",
     "    name = enrollment.certificate_name or enrollment.display_name\n",
     "    hash = compute_certificate_id(email)\n",
-    "\n",
+    "    \n",
     "    if email in seen:\n",
     "        continue\n",
+    "\n",
+    "    url = certificate_url_template.format(hash=hash)\n",
+    "    enrollment.certificate_url = url\n",
+    "    enrollments.append(enrollment)\n",
     "\n",
     "    seen.add(email)\n",
     "    \n",
@@ -172,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "0805b6e0-d4b5-4b0e-aae6-78a0471b3a3c",
    "metadata": {},
    "outputs": [],
@@ -182,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "id": "79b1a4ff-2662-472a-899a-fd17a1f4954d",
    "metadata": {},
    "outputs": [],
@@ -192,8 +211,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "f062751b-cffc-4d31-bd71-b52e7822450f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "134"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Enrollment.objects.bulk_update(enrollments, fields=['certificate_url'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "2f4064bd-a1ef-44f6-97b4-e68eb60e90c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3009"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enrollments[0].student.id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "058dc7ee-b303-427e-8d06-51d772fd5baa",
    "metadata": {},
    "outputs": [],
    "source": []
