--- a/notebooks/graduates.ipynb
+++ b/notebooks/graduates.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "f78701db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IS_LOCAL=True\n",
+      "['C:\\\\Users\\\\alexe\\\\git\\\\course-management-platform\\\\.venv\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\alexe\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-aa0e56e3-a948-4066-a566-f347fb05c955.json']\n",
+      "Is test: False\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.chdir('..')\n",
@@ -20,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "c7af9387-0c73-4b6d-a0db-e49bee7237fd",
    "metadata": {},
    "outputs": [],
@@ -30,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "bfc4ba99-14bc-44ec-8a23-d3d3b4b0c3cd",
    "metadata": {},
    "outputs": [
@@ -38,52 +48,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MLOps Zoomcamp 2024\n"
+      "LLM Zoomcamp 2024\n"
      ]
     }
    ],
    "source": [
-    "course = Course.objects.get(id=3)\n",
+    "course = Course.objects.get(id=4)\n",
     "print(course)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "54973484-3246-442a-b9b7-f5c675157221",
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = r'C:\\Users\\alexe\\git\\zoomcamp-scoring\\certificates\\courses\\mlopszoomcamp-2024\\graduates.csv'"
+    "output = r'C:/Users/alexe/git/zoomcamp-scoring/courses/llmzoomcamp-2024/graduates.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "0da1bf2c-b241-46e2-9cc5-90934107e2f5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://certificate.datatalks.club/mlops-zoomcamp/2024/{hash}.pdf'"
+       "'https://certificate.datatalks.club/llm-zoomcamp/2024/{hash}.pdf'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cohort = 2024\n",
-    "course_name = 'mlops-zoomcamp'\n",
+    "course_name = 'llm-zoomcamp'\n",
     "certificate_url_template = f\"https://certificate.datatalks.club/{course_name}/{cohort}/{{hash}}.pdf\"\n",
     "certificate_url_template"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "c6798c0f-726d-4469-a8ac-f0d257252b30",
    "metadata": {},
    "outputs": [],
@@ -93,17 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "df384f6b-9c4f-4abe-879b-9a5787ee4279",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "138"
+       "151"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "3e110177-ce48-4e92-bda0-4149ce14c7a6",
    "metadata": {},
    "outputs": [],
@@ -131,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "dc3dadd6-63e8-4345-b91f-163e7d8e4093",
    "metadata": {},
    "outputs": [],
@@ -141,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "9186edcf-027f-4a2f-bdc4-92882b3e29bd",
    "metadata": {},
    "outputs": [],
@@ -157,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "f5d3fbb7-e86a-4e90-b8c6-da2fd7a640fc",
    "metadata": {},
    "outputs": [],
@@ -191,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "0805b6e0-d4b5-4b0e-aae6-78a0471b3a3c",
    "metadata": {},
    "outputs": [],
@@ -201,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "79b1a4ff-2662-472a-899a-fd17a1f4954d",
    "metadata": {},
    "outputs": [],
@@ -211,17 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "f062751b-cffc-4d31-bd71-b52e7822450f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "134"
+       "147"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,17 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "2f4064bd-a1ef-44f6-97b4-e68eb60e90c7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3009"
+       "4025"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
