--- a/notebooks/merge_submissions.ipynb
+++ b/notebooks/merge_submissions.ipynb
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "IS_LOCAL=True\n",
-      "['C:\\\\Users\\\\alexe\\\\.virtualenvs\\\\course-management-platform-wiAsnpQu\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\alexe\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-bacd9c8c-821b-460f-ad42-d7e86b2a1932.json']\n",
+      "['C:\\\\Users\\\\alexe\\\\git\\\\course-management-platform\\\\.venv\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\alexe\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-54e089f3-ae67-4c99-879d-625d6d2243a7.json']\n",
       "Is test: False\n"
      ]
     }
@@ -40,23 +40,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a9d73e4f-6889-4237-a262-9ee655c45999",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Course: Machine Learning Zoomcamp 2024>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "course = Course.objects.get(id=1)"
+    "course = Course.objects.get(id=5)\n",
+    "course"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "bfc4ba99-14bc-44ec-8a23-d3d3b4b0c3cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "email_main = \"x\"\n",
-    "email_other = \"y\"\n",
+    "email_other = \"x\"\n",
     "\n",
     "user_main = User.objects.get(email=email_main)\n",
     "enrollment_main = Enrollment.objects.get(course=course, student=user_main)\n",
@@ -67,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "c2821302-5984-4442-86ae-77441de94318",
    "metadata": {},
    "outputs": [
@@ -75,8 +87,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25 58\n",
-      "1253 7\n"
+      "5200 13\n",
+      "4593 20\n"
      ]
     }
    ],
@@ -87,10 +99,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "4cf3d02a-c66a-42dd-8f7e-91ee592deae9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "updated 10804\n",
+      "updated 11470\n"
+     ]
+    }
+   ],
    "source": [
     "other_submissions = Submission.objects.filter(enrollment=enrollment_other)\n",
     "\n",
