--- a/notebooks/criteria.ipynb
+++ b/notebooks/criteria.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f78701db",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "IS_LOCAL=True\n",
-      "['C:\\\\Users\\\\alexe\\\\.virtualenvs\\\\course-management-platform-wiAsnpQu\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\alexe\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-afd44881-fc2d-4e6f-aa83-e0c21309ce18.json']\n",
+      "['C:\\\\Users\\\\alexe\\\\git\\\\course-management-platform\\\\.venv\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\alexe\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-2bf80faa-4ceb-4139-9bab-0b23017f9ab6.json']\n",
       "Is test: False\n"
      ]
     }
@@ -30,12 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b5075cf6-0c21-48b6-8d66-f9a85acbebd3",
+   "execution_count": 3,
+   "id": "519873c4-206c-469d-9e72-8612701d924b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from courses.models import ReviewCriteria, ReviewCriteriaTypes, Course"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96a12178-8060-4833-ad4c-ef5f7b7a6468",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Data Engineering Course"
    ]
   },
   {
@@ -122,28 +132,401 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "17b60095-1441-4a25-ad94-f2dd1cad5963",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "76295cb3-d316-4a80-9978-6db5f2349ac0",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "course = Course.objects.get(id=1)"
+    "## MLOps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
+   "id": "de810abc-bf28-4d43-a8a4-e722a8964e38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criteria_data = [\n",
+    "    {\n",
+    "        \"description\": \"Problem description\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\"criteria\": \"The problem is not described\", \"score\": 0},\n",
+    "            {\n",
+    "                \"criteria\": \"The problem is described but shortly or not clearly\",\n",
+    "                \"score\": 1,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"The problem is well described and it's clear what the problem the project solves\",\n",
+    "                \"score\": 2,\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Cloud\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"Cloud is not used, things run only locally\",\n",
+    "                \"score\": 0,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"The project is developed on the cloud OR uses localstack (or similar tool) OR the project is deployed to Kubernetes or similar container management platforms\",\n",
+    "                \"score\": 2,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"The project is developed on the cloud and IaC tools are used for provisioning the infrastructure\",\n",
+    "                \"score\": 4,\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Experiment tracking and model registry\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"No experiment tracking or model registry\",\n",
+    "                \"score\": 0,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Experiments are tracked or models are registered in the registry\",\n",
+    "                \"score\": 2,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Both experiment tracking and model registry are used\",\n",
+    "                \"score\": 4,\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Workflow orchestration\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\"criteria\": \"No workflow orchestration\", \"score\": 0},\n",
+    "            {\"criteria\": \"Basic workflow orchestration\", \"score\": 2},\n",
+    "            {\"criteria\": \"Fully deployed workflow\", \"score\": 4},\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Model deployment\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\"criteria\": \"Model is not deployed\", \"score\": 0},\n",
+    "            {\n",
+    "                \"criteria\": \"Model is deployed but only locally\",\n",
+    "                \"score\": 2,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"The model deployment code is containerized and could be deployed to cloud or special tools for model deployment are used\",\n",
+    "                \"score\": 4,\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Model monitoring\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\"criteria\": \"No model monitoring\", \"score\": 0},\n",
+    "            {\n",
+    "                \"criteria\": \"Basic model monitoring that calculates and reports metrics\",\n",
+    "                \"score\": 2,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Comprehensive model monitoring that sends alerts or runs a conditional workflow (e.g. retraining, generating debugging dashboard, switching to a different model) if the defined metrics threshold is violated\",\n",
+    "                \"score\": 4,\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Reproducibility\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"No instructions on how to run the code at all, the data is missing\",\n",
+    "                \"score\": 0,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Some instructions are there, but they are not complete OR instructions are clear and complete, the code works, but the data is missing\",\n",
+    "                \"score\": 2,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Instructions are clear, it's easy to run the code, and it works. The versions for all the dependencies are specified\",\n",
+    "                \"score\": 4,\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Best practices\",\n",
+    "        \"type\": ReviewCriteriaTypes.CHECKBOXES.value,\n",
+    "        \"options\": [\n",
+    "            {\"criteria\": \"There are unit tests\", \"score\": 1},\n",
+    "            {\"criteria\": \"There is an integration test\", \"score\": 1},\n",
+    "            {\n",
+    "                \"criteria\": \"Linter and/or code formatter are used\",\n",
+    "                \"score\": 1,\n",
+    "            },\n",
+    "            {\"criteria\": \"There's a Makefile\", \"score\": 1},\n",
+    "            {\"criteria\": \"There are pre-commit hooks\", \"score\": 1},\n",
+    "            {\"criteria\": \"There's a CI/CD pipeline\", \"score\": 2},\n",
+    "        ],\n",
+    "    },\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f76e6a91-e8f8-4f64-bcee-27bbfe17bc73",
+   "metadata": {},
+   "source": [
+    "## LLM Course"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e4427853-abd1-4126-941d-99c94232435c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criteria_data = [\n",
+    "    {\n",
+    "        \"description\": \"Problem description\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"The problem is not described\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"The problem is described but briefly or unclearly\",\n",
+    "                \"score\": 1,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"The problem is well-described and it's clear what problem the project solves\",\n",
+    "                \"score\": 2,\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"RAG flow\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"No knowledge base or LLM is used\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"No knowledge base is used, and the LLM is queried directly\",\n",
+    "                \"score\": 1,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Both a knowledge base and an LLM are used in the RAG flow\",\n",
+    "                \"score\": 2,\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Retrieval evaluation\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"No evaluation of retrieval is provided\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Only one retrieval approach is evaluated\",\n",
+    "                \"score\": 1,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Multiple retrieval approaches are evaluated, and the best one is used\",\n",
+    "                \"score\": 2,\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"RAG evaluation\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"No evaluation of RAG is provided\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Only one RAG approach (e.g., one prompt) is evaluated\",\n",
+    "                \"score\": 1,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Multiple RAG approaches are evaluated, and the best one is used\",\n",
+    "                \"score\": 2,\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Interface\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"No way to interact with the application at all\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Command line interface, a script, or a Jupyter notebook\",\n",
+    "                \"score\": 1,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"UI (e.g., Streamlit), web application (e.g., Django), or an API (e.g., built with FastAPI)\",\n",
+    "                \"score\": 2,\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Ingestion pipeline\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"No ingestion\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Semi-automated ingestion of the dataset into the knowledge base, e.g., with a Jupyter notebook\",\n",
+    "                \"score\": 1,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Automated ingestion with a Python script or a special tool (e.g., Mage, dlt, Airflow, Prefect)\",\n",
+    "                \"score\": 2,\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Monitoring\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"No monitoring\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"User feedback is collected OR there's a monitoring dashboard\",\n",
+    "                \"score\": 1,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"User feedback is collected and there's a dashboard with at least 5 panels\",\n",
+    "                \"score\": 2,\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Containerization\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"No containerization\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Dockerfile is provided for the main application OR there's a docker-compose for the dependencies only\",\n",
+    "                \"score\": 1,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Everything is in docker-compose\",\n",
+    "                \"score\": 2,\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Reproducibility\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"No instructions on how to run the code, the data is missing, or it's unclear how to access it\",\n",
+    "                \"score\": 0,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Some instructions are provided but are incomplete, OR instructions are clear and complete, the code works, but the data is missing\",\n",
+    "                \"score\": 1,\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Instructions are clear, the dataset is accessible, it's easy to run the code, and it works. The versions for all dependencies are specified.\",\n",
+    "                \"score\": 2,\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Best practices\",\n",
+    "        \"type\": ReviewCriteriaTypes.CHECKBOXES.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"Hybrid search\",\n",
+    "                \"score\": 1\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Document re-ranking\",\n",
+    "                \"score\": 1\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"User query rewriting\",\n",
+    "                \"score\": 1\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Bonus points (not covered in the course)\",\n",
+    "        \"type\": ReviewCriteriaTypes.CHECKBOXES.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"Deployment to the cloud\",\n",
+    "                \"score\": 2\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5b3fee0-d80f-4d60-8a00-5ffeb77af335",
+   "metadata": {},
+   "source": [
+    "## Adding to the course"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "17b60095-1441-4a25-ad94-f2dd1cad5963",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Course: LLM Zoomcamp 2024>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "course = Course.objects.get(id=4)\n",
+    "course"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "c79f9b3f-3545-4f62-b777-549d10be5908",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, {'courses.ReviewCriteria': 2})"
+       "(0, {})"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "dd12488e-ae27-4c4e-9c26-2ddc933e5694",
    "metadata": {},
    "outputs": [],
@@ -166,30 +549,24 @@
     "        description=criterion[\"description\"],\n",
     "        review_criteria_type=criterion[\"type\"],\n",
     "        options=criterion[\"options\"],\n",
-    "        max_score=4\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "288bd72c-75db-43cc-b592-ffffffb5cb0d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'description': 'Reproducibility',\n",
-       " 'type': 'RB',\n",
-       " 'options': [{'criteria': 'No instructions how to run the code at all',\n",
-       "   'score': 0},\n",
-       "  {'criteria': 'Some instructions are there, but they are not complete',\n",
-       "   'score': 2},\n",
-       "  {'criteria': \"Instructions are clear, it's easy to run the code, and the code works\",\n",
-       "   'score': 4}]}"
+       "{'description': 'Bonus points (not covered in the course)',\n",
+       " 'type': 'CB',\n",
+       " 'options': [{'criteria': 'Deployment to the cloud', 'score': 2}]}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
