--- a/notebooks/criteria.ipynb
+++ b/notebooks/criteria.ipynb
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "IS_LOCAL=True\n",
-      "['C:\\\\Users\\\\alexe\\\\git\\\\course-management-platform\\\\.venv\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\alexe\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-2bf80faa-4ceb-4139-9bab-0b23017f9ab6.json']\n",
+      "['C:\\\\Users\\\\alexe\\\\git\\\\course-management-platform\\\\.venv\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\alexe\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-e524164f-a8dd-4b3d-bedc-9340bd362f77.json']\n",
       "Is test: False\n"
      ]
     }
@@ -278,7 +278,9 @@
   {
    "cell_type": "markdown",
    "id": "f76e6a91-e8f8-4f64-bcee-27bbfe17bc73",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## LLM Course"
    ]
@@ -486,6 +488,179 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5be5df5c-adc8-4ac9-a159-ae4ec78dccbf",
+   "metadata": {},
+   "source": [
+    "## ML Zoomcamp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4ee2a4fe-e4b7-456b-be4f-80e43f63257b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criteria_data = [\n",
+    "    {\n",
+    "        \"description\": \"Problem description\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"Problem is not described\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Problem is described in README briefly without much details\",\n",
+    "                \"score\": 1\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Problem is described in README with enough context, so it's clear what the problem is and how the solution will be used\",\n",
+    "                \"score\": 2\n",
+    "            }\n",
+    "        ]\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"EDA\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"No EDA\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Basic EDA (looking at min-max values, checking for missing values)\",\n",
+    "                \"score\": 1\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Extensive EDA (ranges of values, missing values, analysis of target variable, feature importance analysis). For images: analyzing the content of the images. For texts: frequent words, word clouds, etc.\",\n",
+    "                \"score\": 2\n",
+    "            }\n",
+    "        ]\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Model training\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"No model training\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Trained only one model, no parameter tuning\",\n",
+    "                \"score\": 1\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Trained multiple models (linear and tree-based). For neural networks: tried multiple variations - with dropout or without, with extra inner layers or without\",\n",
+    "                \"score\": 2\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Trained multiple models and tuned their parameters. For neural networks: same as previous, but also with tuning: adjusting learning rate, dropout rate, size of the inner layer, etc.\",\n",
+    "                \"score\": 3\n",
+    "            }\n",
+    "        ]\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Exporting notebook to script\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"No script for training a model\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"The logic for training the model is exported to a separate script\",\n",
+    "                \"score\": 1\n",
+    "            }\n",
+    "        ]\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Reproducibility\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"Not possible to execute the notebook and the training script. Data is missing or it's not easily accessible\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"It's possible to re-execute the notebook and the training script without errors. The dataset is committed in the project repository or there are clear instructions on how to download the data\",\n",
+    "                \"score\": 1\n",
+    "            }\n",
+    "        ]\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Model deployment\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"Model is not deployed\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Model is deployed (with Flask, BentoML or a similar framework)\",\n",
+    "                \"score\": 1\n",
+    "            }\n",
+    "        ]\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Dependency and environment management\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"No dependency management\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Provided a file with dependencies (requirements.txt, pipfile, bentofile.yaml with dependencies, etc.)\",\n",
+    "                \"score\": 1\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Provided a file with dependencies and used virtual environment. README says how to install the dependencies and how to activate the env\",\n",
+    "                \"score\": 2\n",
+    "            }\n",
+    "        ]\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Containerization\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"No containerization\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Dockerfile is provided or a tool that creates a docker image is used (e.g. BentoML)\",\n",
+    "                \"score\": 1\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"The application is containerized and the README describes how to build a container and how to run it\",\n",
+    "                \"score\": 2\n",
+    "            }\n",
+    "        ]\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"Cloud deployment\",\n",
+    "        \"type\": ReviewCriteriaTypes.RADIO_BUTTONS.value,\n",
+    "        \"options\": [\n",
+    "            {\n",
+    "                \"criteria\": \"No deployment to the cloud\",\n",
+    "                \"score\": 0\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"Docs describe clearly (with code) how to deploy the service to cloud or Kubernetes cluster (local or remote)\",\n",
+    "                \"score\": 1\n",
+    "            },\n",
+    "            {\n",
+    "                \"criteria\": \"There's code for deployment to cloud or Kubernetes cluster (local or remote). There's a URL for testing - or video/screenshot of testing it\",\n",
+    "                \"score\": 2\n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c5b3fee0-d80f-4d60-8a00-5ffeb77af335",
    "metadata": {},
    "source": [
@@ -501,7 +676,7 @@
     {
      "data": {
       "text/plain": [
-       "<Course: LLM Zoomcamp 2024>"
+       "<Course: Machine Learning Zoomcamp 2024>"
       ]
      },
      "execution_count": 5,
@@ -510,7 +685,7 @@
     }
    ],
    "source": [
-    "course = Course.objects.get(id=4)\n",
+    "course = Course.objects.get(id=5)\n",
     "course"
    ]
   },
@@ -561,9 +736,13 @@
     {
      "data": {
       "text/plain": [
-       "{'description': 'Bonus points (not covered in the course)',\n",
-       " 'type': 'CB',\n",
-       " 'options': [{'criteria': 'Deployment to the cloud', 'score': 2}]}"
+       "{'description': 'Cloud deployment',\n",
+       " 'type': 'RB',\n",
+       " 'options': [{'criteria': 'No deployment to the cloud', 'score': 0},\n",
+       "  {'criteria': 'Docs describe clearly (with code) how to deploy the service to cloud or Kubernetes cluster (local or remote)',\n",
+       "   'score': 1},\n",
+       "  {'criteria': \"There's code for deployment to cloud or Kubernetes cluster (local or remote). There's a URL for testing - or video/screenshot of testing it\",\n",
+       "   'score': 2}]}"
       ]
      },
      "execution_count": 8,
