--- a/notebooks/project-review-delete.ipynb
+++ b/notebooks/project-review-delete.ipynb
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "IS_LOCAL=True\n",
-      "['C:\\\\Users\\\\alexe\\\\git\\\\course-management-platform\\\\.venv\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\alexe\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-8af9167b-5068-4de3-afda-4fce0295d2e8.json']\n",
+      "['C:\\\\Users\\\\alexe\\\\git\\\\course-management-platform\\\\.venv\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\alexe\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-d5d3620b-fc91-4661-a648-5cb9f015fb9a.json']\n",
       "Is test: False\n"
      ]
     }
@@ -40,70 +40,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c3a60ba4-939f-459b-b7be-2d495f010361",
+   "execution_count": 5,
+   "id": "36039243-82e6-4c89-bdbe-e5120a8fac98",
    "metadata": {},
    "outputs": [],
    "source": [
-    "admin = User.objects.all()[0]"
+    "project = Project.objects.get(id=9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "4e5f9d7c-8f33-49a5-b665-fc15c4fd2bc9",
+   "execution_count": 6,
+   "id": "271342ba-a36d-4623-8d61-1424eb8efb99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub = ProjectSubmission.objects.get(student=admin, project__slug='fake-project')"
+    "reviews = PeerReview.objects.filter(submission_under_evaluation__project=project)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "3af95196-5fab-4e49-b131-84695b24e982",
+   "execution_count": 9,
+   "id": "a40e69c5-c11c-4a45-8f69-fcc58c450ad4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ProjectSubmission: project submission for enrollment 1>"
+       "(577, {'courses.PeerReview': 577})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sub"
+    "reviews.delete()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "47c2fd09-92a5-41a3-a812-b673294a5e77",
+   "execution_count": 10,
+   "id": "6c901d07-47c5-41fd-b7d0-93843db38e7c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, {'courses.ProjectSubmission': 1})"
+       "0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sub.delete()"
+    "len(reviews)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c901d07-47c5-41fd-b7d0-93843db38e7c",
+   "id": "6ba3e481-ac95-4376-b67f-3920bb8a9210",
    "metadata": {},
    "outputs": [],
    "source": []
