--- a/notebooks/graduates-two-projects.ipynb
+++ b/notebooks/graduates-two-projects.ipynb
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "IS_LOCAL=True\n",
-      "['C:\\\\Users\\\\alexe\\\\.virtualenvs\\\\course-management-platform-wiAsnpQu\\\\Lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\alexe\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-9eb5d2ed-4b55-4182-b34d-d65b8ae9db36.json']\n",
+      "['C:\\\\Users\\\\alexe\\\\.virtualenvs\\\\course-management-platform-wiAsnpQu\\\\Lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\alexe\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-2354cbdf-edaf-4e51-af6d-2f2362cb2cfd.json']\n",
       "Is test: False\n"
      ]
     }
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "02e2d90a-8a86-4fed-ab3d-38c713fb0727",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c7af9387-0c73-4b6d-a0db-e49bee7237fd",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "bfc4ba99-14bc-44ec-8a23-d3d3b4b0c3cd",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "54973484-3246-442a-b9b7-f5c675157221",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "db5cef40-76cf-4ff7-a1f5-3cacf8477137",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "0da1bf2c-b241-46e2-9cc5-90934107e2f5",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
        "'https://certificate.datatalks.club/ml-zoomcamp/2024/{hash}.pdf'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,41 +114,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "c6798c0f-726d-4469-a8ac-f0d257252b30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submissions = ProjectSubmission.objects \\\n",
+    "    .filter(project__course=course, passed=True) \\\n",
+    "    .prefetch_related(\"enrollment\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "be7e8e3d-1405-4866-b816-fbf9c11997d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "393"
+       "170"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "graduates = ProjectSubmission.objects \\\n",
-    "    .filter(project__course=course, passed=True) \\\n",
-    "    .prefetch_related(\"enrollment\")\n",
-    "\n",
-    "len(graduates)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "be7e8e3d-1405-4866-b816-fbf9c11997d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "cnt = Counter()\n",
     "ids_mapping = {}\n",
     "\n",
-    "for g in graduates:\n",
-    "    e = g.enrollment\n",
+    "for s in submissions:\n",
+    "    e = s.enrollment\n",
     "    eid = e.id\n",
     "    cnt[eid] += 1\n",
     "    ids_mapping[eid] = e\n",
@@ -157,12 +155,14 @@
     "\n",
     "for eid, c in list(cnt.items()):\n",
     "    if c >= min_projects:\n",
-    "        passed.append(ids_mapping[eid])"
+    "        passed.append(ids_mapping[eid])\n",
+    "\n",
+    "len(passed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "3e110177-ce48-4e92-bda0-4149ce14c7a6",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "9186edcf-027f-4a2f-bdc4-92882b3e29bd",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "f5d3fbb7-e86a-4e90-b8c6-da2fd7a640fc",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "0805b6e0-d4b5-4b0e-aae6-78a0471b3a3c",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "f062751b-cffc-4d31-bd71-b52e7822450f",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
        "170"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
