--- a/notebooks/graduates.ipynb
+++ b/notebooks/graduates.ipynb
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "IS_LOCAL=True\n",
-      "['C:\\\\Users\\\\alexe\\\\git\\\\course-management-platform\\\\.venv\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\alexe\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-c5c3ebaa-fdd2-4ce9-be8b-d36740e66c55.json']\n",
+      "['C:\\\\Users\\\\alexe\\\\git\\\\course-management-platform\\\\.venv\\\\Lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\alexe\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-a4298da8-51be-409c-82a2-3106852b7835.json']\n",
       "Is test: False\n"
      ]
     }
@@ -48,12 +48,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LLM Zoomcamp 2024\n"
+      "Data Engineering Zoomcamp 2025\n"
      ]
     }
    ],
    "source": [
-    "course = Course.objects.get(id=4)\n",
+    "course = Course.objects.get(id=6)\n",
     "print(course)"
    ]
   },
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = r'C:/Users/alexe/git/zoomcamp-scoring/courses/llmzoomcamp-2024/graduates.csv'"
+    "output = r'C:/Users/alexe/git/zoomcamp-scoring/courses/dezoomcamp-2025/graduates.csv'"
    ]
   },
   {
@@ -76,7 +76,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://certificate.datatalks.club/llm-zoomcamp/2024/{hash}.pdf'"
+       "'https://certificate.datatalks.club/dezoomcamp/2025/{hash}.pdf'"
       ]
      },
      "execution_count": 5,
@@ -85,8 +85,8 @@
     }
    ],
    "source": [
-    "cohort = 2024\n",
-    "course_name = 'llm-zoomcamp'\n",
+    "cohort = 2025\n",
+    "course_name = 'dezoomcamp'\n",
     "certificate_url_template = f\"https://certificate.datatalks.club/{course_name}/{cohort}/{{hash}}.pdf\"\n",
     "certificate_url_template"
    ]
@@ -110,7 +110,7 @@
     {
      "data": {
       "text/plain": [
-       "177"
+       "358"
       ]
      },
      "execution_count": 7,
@@ -228,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "170"
+       "345"
       ]
      },
      "execution_count": 14,
@@ -249,7 +249,7 @@
     {
      "data": {
       "text/plain": [
-       "4025"
+       "5391"
       ]
      },
      "execution_count": 15,
@@ -286,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
